benchmark/scripts/benchmark/latency/buffer-manifest/kvstore-no-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  clusterIP: 10.96.88.88
  ports:
  - name: frontend
    port: 80
    targetPort: 8080
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
      - image: appnetorg/kvstore-grpc:latest
        name: frontend-kvstore-grpc
        command: ["/app/frontend/frontend"]
  selector:
    matchLabels:
      app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: kvstore
  labels:
    app: kvstore
spec:
  clusterIP: None    
  ports:
  - name: kvstore
    port: 11000
    protocol: TCP
    targetPort: 11000
  selector:
    app: kvstore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kvstore
spec:
  replicas: 1
  template:
    metadata:
      name: kvstore
      labels:
        app: kvstore
    spec:
      containers:
      - image: appnetorg/kvstore-grpc:latest
        name: kvstore-kvstore-grpc
        command: ["/app/kvstore/kvstore"]
  selector:
    matchLabels:
      app: kvstore
